--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: windrose
 Type: Package
-Title: Supports the creation and plotting of rose plots for wind data
+Title: Provide ggplot2 rose plots for wind data
 Version: 0.1
-Date: 2014-10-20
-Author: Thomas Hopper
-Maintainer: Thomas Hopper <tomhopper@gmail.com>
-Depends: R (>= 3.0), ggplot2, RColorBrewer,scales
-Description: Supports creation of a “windrose” object, which can then be plotted. Based on code originally created by Andy Clifton and posted to Stack Overflow http://stackoverflow.com/a/17266781/393354
+Date: 2017-12-28
+Author: Alfonso Crisci
+Maintainer: Alfonso Crisci <alfcrisci@gmail.com>
+Depends: ggplot2, RColorBrewer, scales, ggthemes
+Description: Supports the creation of a “windrose” object, which can then be plotted. Based on code originally created by Andy Clifton and developed and improved by Thomas Hopper (https://github.com/tomhopper/windrose)
 License: MIT
 Encoding: UTF-8
+RoxygenNote: 6.0.1
